Solved plotly_direct interference with dark mode set in base.html

--- a/quotes/static/assets/buttons.css
+++ b/quotes/static/assets/buttons.css
@@ -20,7 +20,7 @@
 }
   
 .radio-group .btn-group > .form-check:not(:first-child) > .btn {
-border-top-left-radius: 0;
-border-bottom-left-radius: 0;
-margin-left: -1px;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	padding-left: -1px;
 }
